;; A UTF8-aware lexer library

(ocamllex Core)

(library
  (name LexerLib)
  (public_name LexerLib)
  (modules
     Client Status Options CLI LowAPI Core Unit Error
     Thread State Markup Version)
  (modules_without_implementation
     Status Client)
  (private_modules
     Core Error Version)
  (libraries
    ;; Vendor
    simple-utils
    Preprocessor
    GetoptLib
    ;; Third party
    uutf)
  (flags (:standard -open Core)))

;; Build of the version source (for the user, as a CLI option)

(rule
 (targets version.ml)
 (action (with-stdout-to
          version.ml
          (run "sh" "-c"
               "printf 'let version = \"%s\"' \"${LIGO_VERSION}\""))))
